--- a/Index.html
+++ b/Index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./Stylesheet/stylesheet.css">
     <title>Table</title>
 </head>
 <body>
-    <table style="width: 100%; ">
+    <table>
+        <caption class="heading"><h1>Table</h1></caption>
         <tr>
             <th colspan="1">Col-1</th>
             <th colspan="2">Col-2</th>
@@ -34,7 +36,7 @@
         <tr>
             <td colspan="2">1</td>
             <td colspan="2">2</td>
-            <td>3</td>
+            <td 3</td>
         </tr>
 </table>   
 </body>
